@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<object name="portal_kss" meta_type="KSS Registry">
+ <kineticstylesheet remove="True" id="linguaplone.kss"/>
+</object>
