@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<object name="reference_catalog">
+ <column value="Language" remove="True"/>
+</object>
