@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<object name="portal_skins">
+ <object name="LinguaPlone" meta_type="Filesystem Directory View"
+     directory="Products.LinguaPlone:skins/LinguaPlone"
+     remove="True"/>
+ <skin-path name="*">
+  <layer name="LinguaPlone" remove="True" />
+ </skin-path>
+</object>
