@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<object name="uid_catalog">
+  <index name="Language" meta_type="FieldIndex" remove="True"/>
+</object>
